# AI-Photo-TrailSnap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_en.md
package/ai/: Dockerfile  Dockerfile.gpu  README.md  main.py  pyproject.toml
package/ai/app/: config.py
package/ai/app/data/: railway_station.json
package/ai/app/routers/: embedding.py  face.py  image_classification.py  llm.py  object_detection.py  ocr.py  tickets.py
package/ai/app/services/: ai_config_manager.py  embedding_service.py  face_service.py  image_classification_service.py  llm_manager.py  ocr_service.py  ticket_parser.py  ticket_service.py
package/server/: README.md  main.py  pyproject.toml  start_mcp.py
package/server/alembic/versions/: 06ce8a56658b_0010_add_users_table.py  092372eeb240_0016_add_index.py  0a3b98f751d6_0007_add_face_foreign.py  332ee902efb6_0002_add_maker_model_metadata.py  351912b2c1be_0014_add_agent_sessions.py  3bceb4cf5cb0_0019_add_reasoning_.py  441989688cbf_add_md5_to_photo.py  522f0c6de59e_0022_add_foreignkey_for_photo_id.py  56469698510b_0017_add_task_indexes.py  802490a6bc41_0001_init.py  8a99de383ac5_0004_add_ticket_photoid.py  9136754cc2a3_0003_add_scene_table.py  96354f1896be_0011_add_shared_albums.py  9d99204b4d54_0012_add_image_descriptions.py  9f2944ccd13d_0006_add_flight_tickets_table.py  a065d6d8e0e3_0008_add_face.py  a356eea37cbc_0013_add_cluster_tables.py  b21a07c0b227_0023_add_cover_id_to_tag.py  b3db8760aba9_0005_add_is_custom_to_scenes.py  b802bd9b9d3b_0009_drop_users.py  eb64391bffef_0021_add_index_for_metadata.py  f0a995211c59_add_soft_delete_fields_to_photo_model.py  f123456789ab_0015_add_agent_tokens.py
package/server/app/: dependencies.py  worker.py
package/server/app/api/: agent.py  album.py  auth.py  classification.py  deps.py  face.py  flight_ticket.py  location.py  mcp.py  media.py  metadata.py  ocr.py  photo.py  search.py  settings.py  system.py  tasks.py  toolbox.py  train_ticket.py
package/server/app/core/: config_manager.py  security.py  system_config.py
package/server/app/crud/: album.py  annual_report.py  crud_vector.py  face.py  flight_ticket.py  location.py  ocr.py  photo.py  scene.py  tag.py  task.py  train_ticket.py
package/server/app/schemas/: agent.py  flight_ticket.py  location.py  metadata.py  photo.py  train_ticket.py
package/server/app/service/: storage.py  task_manager.py  task_strategy.py  task_worker.py
package/server/app/utils/: embedding.py  exif.py  hash.py
package/trailsnap-cli/: .gitignore  BUILD.md  README.md  package.json  pyproject.toml
package/trailsnap-cli/scripts/: install.js
package/trailsnap-cli/trailsnap/: cli.py  output.py  utils.py
package/trailsnap-cli/trailsnap/commands/: __init__.py  albums.py  config.py  folders.py  locations.py  people.py  photos.py  tags.py
(+176 files in other folders)
