[project]
name = "server"
version = "0.3.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.4",
    "aiosqlite==0.21.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "fastapi>=0.122.0",
    "openai>=2.14.0",
    "opencv-python-headless>=4.12.0.88",
    "pgvector>=0.4.2",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.27",
    "requests>=2.32.5",
    "reverse-geocoder>=1.5.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.0.0",
    "bcrypt==4.0.1",
    "passlib==1.7.4",
    "ollama>=0.6.1",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.10",
    "langgraph>=0.2.61",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
