[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trailsnap-cli"
version = "0.4.0"
description = "TrailSnap Command Line Interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
trailsnap = "trailsnap.cli:main"

[tool.setuptools]
packages = ["trailsnap", "trailsnap.commands"]
